# morelia_server

./: .buildinfo  .gitignore  AUTHORS.md  CHANGES.md  CONTRIBUTING.md  Dockerfile  LICENSE  Pipfile  README.md  README_ENG.md  app.py  client.py  config.py  const.py  debug_server.py  development.html  doc.html  example_config.ini  example_config.toml  genindex.html  index.html  install.html  licence.html  manage.py  notice_in_file_header.txt  objects.inv  pyproject.toml  r.txt  requirements.txt  search.html  searchindex.js  server.py  settings.py  setup.cfg  test.py  test.txt
.github/: pull_request_template.md
.github/workflows/: coveralls.yml  docker-image.yml  docker-publish-image-stable.yml  docker-publish-image-unstable.yml  docker-publish-image.yaml  docker-publish-image.yml  docs.yml  python-app.yml  test_and_linting.yml  tests.yml
_sources/: doc.rst.txt  index.rst.txt  licence.rst.txt
admin/: admin.py  control.py  general.py  login.py  logs.py  manage.py
admin/templates/: base_admin.html  index_admin.html  login.html  logs_admin.html  manage_admin.html  status_admin.html
database/: database.db  main.py
develop/: doc.html  genindex.html  index.html  objects.inv  searchindex.js
develop-nekrod/: .buildinfo  development.html  doc.html  genindex.html  index.html  search.html
master/: doc.html  index.html  searchindex.js
mod/: __init__.py  api.py  config.py  controller.py  error.py  errors.py  func.py  lib.py  libhash.py  log_handler.py  logging.py  models.py  shared_lib.py  shared_objects.py
morelia_client_web_lite/: .gitignore
settings/: logging.py  logging.yaml
templates/: base.html  index.html  status.html
tests/: test_admin.py  test_api.py  test_config.py  test_config_handler.py  test_config_models.py  test_config_validator.py  test_controller.py  test_dbhandler.py  test_error.py  test_lib.py  test_manage.py  test_protocol_api.py  test_protocol_matrix_worker.py  test_protocol_mtp_api.py  test_protocol_mtp_worker.py  test_protocol_worker.py  test_server.py
Тестовый клиент WEB/: README.md  VERSION.md  index.html
(+64 files in other folders)
